--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 group = 'com.ekinsol.challenge'
 version = '1.0'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
 
 configurations {
 	compileOnly {
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.nimbusds:nimbus-jose-jwt:9.15.1'
 	implementation 'org.flywaydb:flyway-core'
 	implementation platform("com.amazonaws:aws-java-sdk-bom:1.12.5")
