--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,6 +8,21 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+  mail:
+    host: localhost
+    username: test
+    password: test
+    properties:
+      mail:
+        transport:
+          protocol: smtp
+        smtp:
+          port: 1025
+          auth: true
+          startttls:
+            enable: true
+            required: true
+
 ekinsol:
   s3:
     bucketName: comet2-infra-tfstate
@@ -21,3 +36,7 @@ aws:
   secret_access_key: ''
   s3:
     region : us-east-1
+
+from:
+  email:
+    address: test@test.com
